# autoplaylist

./: .gitignore  Dockerfile  Dockerfile_arm  README.md  build-and-run.sh  build.gradle  build.sh  config.yaml  dependencies.gradle  docker-compose.yaml  download.sh  gradle.properties  pom.xml  settings.gradle  test.sh  update.sh
.circleci/: config.yml  config.yml_old
api/: build.gradle  (+1 more)
autoplaylist-cli/: Cargo.toml
autoplaylist-cli/src/: auth.rs  config.rs  main.rs  test.rs
autoplaylist-cli/src/spotify/: autoplaylist_core.rs  mod.rs  spotify_client.rs
reader/: .gitignore  Cargo.toml  Dockerfile  README.md  build-and-run.sh  build.gradle  build.rs  build.sh  dependencies.gradle  deploy.sh  docker-compose.yaml  pom.xml  settings.gradle
reader/gradle/wrapper/: gradle-wrapper.properties
reader/server/common/dto/: pom.xml
reader/server/common/dto/src/main/kotlin/com/richodemus/reader/dto/: EventId.kt  FeedId.kt  FeedName.kt  FeedUrl.kt  ItemId.kt  Label.kt  LabelId.kt  LabelName.kt  Password.kt  PasswordHash.kt  PlaylistId.kt  Session.kt  UserId.kt  Username.kt
reader/server/common/dto/src/test/kotlin/com/richodemus/reader/dto/: EventIdTest.kt  SessionTest.kt  UsernameTest.kt
reader/server/common/events/: build.gradle  pom.xml
reader/server/common/events/src/main/kotlin/com/richodemus/reader/events_v2/: EventType.kt  Events.kt
reader/server/common/google-cloud-storage-adapter/: build.gradle  pom.xml
reader/server/common/google-cloud-storage-adapter/src/test/kotlin/: DiskPersistenceTest.kt
reader/server/core/backend/: build.gradle  pom.xml
reader/server/core/backend/src/main/java/com/richo/reader/backend/: Backend.java  LabelManager.java
reader/server/core/backend/src/main/java/com/richodemus/reader/backend/: Backend.java  LabelManager.java
reader/server/core/backend/src/main/kotlin/com/richodemus/reader/backend/: Backend.kt  LabelManager.kt
reader/server/core/backend/src/test/java/com/richo/reader/backend/: BackendTest.java
reader/server/core/backend/src/test/java/com/richodemus/reader/backend/: BackendTest.java
reader/server/core/backend/src/test/kotlin/com/richodemus/reader/backend/: BackendTest.kt
reader/server/core/backend/src/test/resources/: logback-test.xml
reader/server/core/spring/: pom.xml
reader/server/core/spring/src/main/kotlin/com/richodemus/reader/: AdminController.kt  BackendPort.kt  FeedController.kt  LabelController.kt  ReaderApplication.kt  SessionController.kt  UserController.kt  session.kt
reader/server/core/spring/src/main/kotlin/com/richodemus/reader/dto/: Feed.kt  FeedWithoutItems.kt  Item.kt  ItemOperation.kt  User.kt
reader/server/core/spring/src/main/resources/: application.yaml
reader/server/core/spring/src/main/resources/static/: index.html
reader/server/core/spring/src/main/resources/static/js/: Api.js  Service.js
reader/server/core/spring/src/test/kotlin/com/richodemus/reader/reader/: ReaderApplicationTests.kt
reader/server/core/spring/src/test/resources/: application-test.yaml
reader/server/core/web/: build.gradle
reader/server/core/web/src/main/resources/webroot/js/: Api.js  Authentication.js  FormOnLoad.js  Main.js
reader/server/docker/: Dockerfile  build.gradle
reader/server/services/label-service/: build.gradle  pom.xml
reader/server/services/subscription-service/: build.gradle  pom.xml
reader/server/services/user-service/: build.gradle  pom.xml
reader/server/services/youtube-feed-service/: build.gradle  pom.xml
reader/server/services/youtube-feed-service2/: build.gradle
reader/server/test/reader-test/src/component-test/resources/: getListItemsResponseTwoVideos.json  getVideoDetailsResponse.json
reader/src/: config.rs  disk_cache.rs  main.rs  service.rs  sled_wrapper.rs  types.rs
reader/src/endpoints/: admin.rs  endpoint_types.rs  feeds.rs  labels.rs  mod.rs  serve_assets.rs  user.rs  util.rs
reader/src/event/: event_store.rs  events.rs  mod.rs  parse.rs
reader/src/gcs/: filesystem.rs  gcs_client.rs  mod.rs
reader/src/projections/: feed_service.rs  feed_service_download.rs  label_service.rs  mod.rs  subscriptions.rs  user_service.rs  user_service2.rs  watched_items.rs
reader/src/projections/feed_service/: feed_service.rs  feed_service_download.rs  feed_service_statistics.rs  feed_service_types.rs  mod.rs
reader/src/test/: cooler_service_tests.rs  mod.rs  models.rs  service.rs  service_test.rs  service_tests.rs  test_client.rs  test_utils.rs  test_utis.rs  youtube_mock.rs
reader/src/youtube/: mod.rs  youtube_client.rs
reader/static/: index.html
reader/static/js/: Api.js  Buttons.js  Service.js  Table.js
(+786 files in other folders)
