[package]
name = "autoplaylist-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version =  "0", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.56"
pkce = "0.1.1"
base64 = "0.13"
