[package]
name = "autoplaylist-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version =  "0", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"]}
tokio = { version = "1.18.2", features = ["full"] }
warp = "0.3"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.57"
pkce = "0.1.1"
base64 = "0.13"
dirs = "4.0.0"
itertools = "0.10.3"

[dev-dependencies]
httpmock = "0.6"
