[package]
name = "reader"
version = "0.1.0"
edition = "2021"
description = "reader in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-session = { version = "0.8", features = ["cookie-session"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
derive-newtype = "0.2.3"
futures-util = "0.3.25"
itertools = "0.11"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
actix-http = "3.2.2"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
google-cloud-storage = "*"
actix-rt = "2.9.0"
async-once-cell = "0.5.3"
static-files = "0.2.3"
actix-test = "0.1.2"
sled = "0.34.7"

[dev-dependencies]
httpmock = "0.6"

[build-dependencies]
static-files = "0.2.3"
