[package]
name = "reader"
version = "0.1.0"
edition = "2021"
description = "reader in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-http = "3.2"
actix-rt = "2.9"
static-files = "0.2"
actix-test = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
derive-newtype = "0.2"
itertools = "0.14"
once_cell = "1.17"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
google-cloud-storage = "0.24"
async-once-cell = "0.5"
# todo try out compression for sled
sled = "0.34"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
iso8601-duration = "0.2"
bcrypt = "0.17"
dashmap = "6"

[dev-dependencies]
httpmock = "0.7"
pretty_assertions = "1.4"

[build-dependencies]
static-files = "0.2"
